--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Kevin Alves Portfolio">
+		<meta name="theme-color" content="#5eead4" />
 		<title>Kevin Alves</title>
 		%sveltekit.head%
 	</head>
