--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/logo.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#5eead4" />
 		<title>Kevin Alves Fabel</title>
-		<meta name="description" content="Kevin Alves Portfolio">
+		<meta name="description" content="Kevin Alves Fabel Portfolio">
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json">
 		%sveltekit.head%
 	</head>
 	<body
